# simple_blockchain

./: .gitmodules  CMakeLists.txt
docs/: 简化版本区块链程序工作说明.doc
docs/test/: api.html  blocks.html
docs/test/css/: ruige.css.bak
docs/test/json/: test.json  test1.json  test1.json.bak
libraries/: CMakeLists.txt
libraries/chain/: CMakeLists.txt  block.cpp  buffer.cpp  chain_snapshot.cpp  controller.cpp  transaction.cpp
libraries/chain/include/: block.hpp  buffer.hpp  chain_snapshot.hpp  controller.hpp  transaction.hpp
plugins/: CMakeLists.txt
plugins/chain_api_plugin/: chain_api_plugin.cpp
plugins/chain_api_plugin/include/eosio/chain_api_plugin/: chain_api_plugin.hpp
plugins/chain_plugin/: CMakeLists.txt  chain_plugin.cpp
plugins/chain_plugin/include/: config.hpp  config.hpp.ini
plugins/chain_plugin/include/eosio/chain_plugin/: chain_plugin.hpp
plugins/http_plugin/: http_plugin.cpp
plugins/sqlite_plugin/: CMakeLists.txt  sqlite_plugin.cpp
plugins/sqlite_plugin/include/eosio/sqlite_plugin/: sqlite_plugin.hpp
plugins/tool_plugin/: CMakeLists.txt  tool_plugin.cpp
plugins/tool_plugin/include/eosio/tool_plugin/: tool_plugin.hpp
plugins/wallet_plugin/: wallet_manager.cpp  wallet_plugin.cpp
programs/: CMakeLists.txt
programs/cleos/: CMakeLists.txt  main.cpp
programs/keosd/: CMakeLists.txt  main.cpp
programs/nodeos/: CMakeLists.txt  main.cpp
